--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "firebase-admin": "^13.4.0",
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^1.4.5-lts.2",
     "mysql2": "^3.14.1",
     "sequelize": "^6.37.7"
   }
